<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

   <TextView
       android:id="@+id/tvid"
       android:layout_width="match_parent"
       android:layout_height="250dp"
       android:background="#efefef"
       android:gravity="end|bottom"
       android:padding="10dp"
       android:textSize="48sp" />
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_weight="1"
       >

      <Button
          android:id="@+id/b7"
          android:layout_margin="2dp"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="@string/_7"
          android:onClick="onDigit"
          tools:ignore="UsingOnClickInXml" />
      <Button
          android:id="@+id/b8"
          android:layout_margin="2dp"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="@string/_8"
          android:onClick="onDigit"
          />
      <Button
          android:layout_margin="2dp"
          android:id="@+id/b9"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:onClick="onDigit"
          android:text="@string/_9" />
      <Button
          android:layout_margin="2dp"
          android:id="@+id/bdiv"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:onClick="onop"
          android:text="@string/div" />
      
   </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_weight="1"
       >

      <Button
          android:id="@+id/b4"
          android:layout_margin="2dp"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="@string/_4"
          android:onClick="onDigit"
          tools:ignore="UsingOnClickInXml" />
      <Button
          android:id="@+id/b5"
          android:layout_margin="2dp"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:onClick="onDigit"
          android:text="@string/_5" />
      <Button
          android:layout_margin="2dp"
          android:id="@+id/b6"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:onClick="onDigit"
          android:text="@string/_6" />
      <Button
          android:layout_margin="2dp"
          android:id="@+id/bmul"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:onClick="onop"
          android:text="@string/mul" />

   </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_weight="1"
       >

      <Button
          android:id="@+id/b1"
          android:layout_margin="2dp"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="@string/_1"
          android:onClick="onDigit"
          tools:ignore="UsingOnClickInXml" />
      <Button
          android:id="@+id/b2"
          android:layout_margin="2dp"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:onClick="onDigit"
          android:text="@string/_2" />
      <Button
          android:layout_margin="2dp"
          android:id="@+id/b3"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:onClick="onDigit"
          android:text="3" />
      <Button
          android:layout_margin="2dp"
          android:id="@+id/bminus"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:onClick="onop"
          android:text="-" />

   </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_weight="1"
       >
      <Button
          android:layout_margin="2dp"
          android:id="@+id/bdot"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:onClick="onDeci"
          android:text="@string/dot" />

      <Button
          android:id="@+id/b0"
          android:layout_margin="2dp"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="@string/_0"
          android:onClick="onDigit"
          tools:ignore="UsingOnClickInXml" />
      <Button
          android:id="@+id/bclr"
          android:layout_margin="2dp"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:onClick="onclr"
          android:text="@string/clr" />
      <Button
          android:layout_margin="2dp"
          android:id="@+id/badd"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:onClick="onop"
          android:text="@string/ADD" />


   </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_weight="1"
       >


      <Button
          android:layout_margin="2dp"
          android:id="@+id/bequal"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:onClick="oneq"
          android:text="@string/eql" />


   </LinearLayout>

</LinearLayout>